# widemath

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md  Taskfile.yml  conanfile.py
.github/scripts/: conan-ci-setup.sh
.github/workflows/: ci.yml
.github/workflows/install-llvm/: action.yml
benchmark/: CMakeLists.txt
benchmark/source/: uint128.cpp
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  variables.cmake
include/widemath/: carryless_multiplication.hpp  int128.hpp  uint128.hpp  uint128_math.hpp  util.hpp  widemath.hpp
source/: uint128.cpp  widemath.cpp
test/: CMakeLists.txt
test/source/: int128_test.cpp  uint128_test.cpp  widemath_test.cpp
